crates/buff-lang-codegen-rust/tests/snapshots/fs_codegen__dir_codegen_create_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/fs_codegen.rs
assertion_line: 859
expression: src
---
fn f() {
    std::fs::create_dir_all("/tmp/a".to_string()).ok();
}
