crates/buff-lang-codegen-rust/tests/snapshots/fs_codegen__dir_codegen_list_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/fs_codegen.rs
assertion_line: 850
expression: src
---
fn f() {
    std::fs::read_dir("/tmp".to_string())
        .map(|entries| {
            entries
                .filter_map(|e| e.ok())
                .map(|e| e.file_name().to_string_lossy().into_owned())
                .collect::<Vec<String>>()
        })
        .unwrap_or_default();
}
