crates/buff-lang-codegen-rust/tests/snapshots/fs_codegen__dir_codegen_remove_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/fs_codegen.rs
assertion_line: 868
expression: src
---
fn f() {
    std::fs::remove_dir_all("/tmp/a".to_string()).ok();
}
