crates/buff-lang-codegen-rust/tests/snapshots/fs_codegen__path_codegen_basename_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/fs_codegen.rs
assertion_line: 835
expression: src
---
fn f() {
    let p: std::path::PathBuf = std::path::PathBuf::from("a".to_string())
        .join("b".to_string());
    p.file_name().and_then(|n| n.to_str()).unwrap_or_default().to_string();
}
