crates/buff-lang-codegen-rust/tests/snapshots/fs_codegen__path_codegen_exists_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/fs_codegen.rs
assertion_line: 844
expression: src
---
fn f() {
    let p: std::path::PathBuf = std::path::PathBuf::from("a".to_string())
        .join("b".to_string());
    p.exists();
}
