crates/buff-lang-codegen-rust/tests/snapshots/fs_codegen__path_codegen_join_two_args_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/fs_codegen.rs
assertion_line: 795
expression: src
---
fn f() {
    std::path::PathBuf::from("a".to_string()).join("b".to_string());
}
