crates/buff-lang-codegen-rust/tests/snapshots/fs_codegen__path_codegen_parent_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/fs_codegen.rs
expression: src
---
fn f() {
    let p: std::path::PathBuf = std::path::PathBuf::from("a").join("b");
    p.parent().map(|p| p.to_path_buf());
}
